--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-input[type="text"],input[type="password"],input[type="email"],textarea{
-    @apply w-full border my-1 py-2 px-3 rounded-2xl;
+input[type="text"],input[type="number"],input[type="password"],input[type="email"],input[type="tel"],textarea{
+    @apply w-full border my-1 py-2 px-3 rounded-2xl focus:outline-none focus:bg-white focus:border-purple-500;
+    
+}
+textarea{
+    height: 140px;
 }
 button{
     @apply bg-gray-300;
 }
 button.primary{
-    background-color:#F5385D;
+    background-color:#3792cb;
     @apply bg-primary p-2 w-full text-white rounded-2xl;
 }
