--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+
 .swiperjs-container .swiper-pagination-bullets {
     display: none;
 }
+.bg-facebook {
+    background-color: #3b5998;
+  }
+  .bg-facebook:hover {
+    background-color: #344e86;
+  }
+  
+  .bg-twitter {
+    background-color: #0072b1;
+  }
+  .bg-twitter:hover {
+    background-color: #005f93;
+  }
